--- a/GradeFour/css/style.css
+++ b/GradeFour/css/style.css
@@ -119,6 +119,35 @@ h6 a {
      opacity: 1
 }
 
+.p1 {
+
+     padding-top: 5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+
 button:focus {
      outline: none;
 }
