--- a/GradeOne/css/style.css
+++ b/GradeOne/css/style.css
@@ -48,13 +48,6 @@ body {
      line-height: 1.80857;
      font-weight: normal;
 }
-table {
-  width: 100%;
-}
-
-th {
-  height: 70px;
-}
 
 a {
      color: #1f1f1f;
@@ -82,6 +75,40 @@ h6 {
      color: #111111;
      margin: 0
 }
+
+
+
+.p1 {
+
+     padding-top: 5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+
+
+
 
 h1 {
      font-size: 24px;
