--- a/GradeThree/css/style.css
+++ b/GradeThree/css/style.css
@@ -108,6 +108,36 @@ h6 {
      box-sizing: border-box;
 }
 
+
+.p1 {
+
+     padding-top: 5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+
 h1 a,
 h2 a,
 h3 a,
