--- a/GradeTwo/css/style.css
+++ b/GradeTwo/css/style.css
@@ -60,6 +60,36 @@ a {
      transition: all .3s ease-in-out;
 }
 
+.p1 {
+
+     padding-top: 5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+
+
 h1,
 h2,
 h3,
