--- a/PreSchool/css/style.css
+++ b/PreSchool/css/style.css
@@ -76,6 +76,40 @@ h6 {
      margin: 0
 }
 
+
+
+.p1 {
+
+     padding-top: 5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+
+
+
+
 h1 {
      font-size: 24px;
 }
